--- a/index.html
+++ b/index.html
@@ -3,86 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Latin Plants Gallery</title>
+    <title>Azu</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f8f9fa;
-        margin: 0;
-        padding: 0;
+      .card-image-top {
+        max-height: 650px;
+        overflow: hidden;
       }
-
-      .container {
-        max-width: 800px;
-        margin: 50px auto;
-        padding: 20px;
-        background-color: #fff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      .negative-margin {
+        margin-top: -650px;
       }
-
-      h1 {
-        text-align: center;
-      }
-
-      .list-group {
-        list-style: none;
-        padding: 0;
-      }
-
-      .list-group-item {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px;
-        border-bottom: 1px solid #dee2e6;
-      }
-
-      .list-group-item:last-child {
-        border-bottom: none;
-      }
-
-      .plant-info {
-        flex: 1;
-      }
-
-      .plant-info h5 {
-        margin: 0 0 10px;
-      }
-
-      .plant-info p {
-        margin: 0;
-      }
-
-      .plant-image {
-        max-width: 100px;
-        border-radius: 5px;
+      .positive-margin {
+        margin-top: 625px;
       }
     </style>
   </head>
-  <body>
-    <div class="container">
-      <h1>Latin Plants Gallery</h1>
-      <ul class="list-group">
-        <!-- Plant 1 -->
-        <li class="list-group-item">
-          <div class="plant-info">
-            <h5>Plant Name 1 (Latin)</h5>
-            <p>Description of Plant 1.</p>
-          </div>
-          <img src="plant1.jpg" alt="Plant 1" class="plant-image" />
-        </li>
+  <body >
+    <div class="container" >
+      <h1 class="fw-light display-4 text-center mt-4 mb-4 display-1">
+        Instrucciones para regar un dpto
+      </h1>
+      <!-- <ul class="list-group"></ul> -->
 
-        <!-- Plant 2 -->
-        <li class="list-group-item">
-          <div class="plant-info">
-            <h5>Plant Name 2 (Latin)</h5>
-            <p>Description of Plant 2.</p>
-          </div>
-          <img src="plant2.jpg" alt="Plant 2" class="plant-image" />
-        </li>
-
-        <!-- Add more plants as needed -->
-      </ul>
+      <div id="target" class="row"></div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="myscript.js"></script>
   </body>
 </html>
