--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
   <body >
     <div class="container" >
       <h1 class="fw-light display-4 text-center mt-4 mb-4 display-1">
-        Instrucciones para regar un dpto
+        &#127793 Instrucciones para regar un dpto &#127793
       </h1>
-      <!-- <ul class="list-group"></ul> -->
-
-      <div id="target" class="row"></div>
+      <div id="target" class="row" style="align-items: stretch;"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
