--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
       }
     </style>
   </head>
-  <body >
-    <div class="container" >
+  <body>
+    <div class="container">
       <h1 class="fw-light display-4 text-center mt-4 mb-4 display-1">
-        &#127793 Instrucciones para regar un dpto &#127793
+        Instrucciones para regar un dpto
       </h1>
-      <div id="target" class="row" style="align-items: stretch;"></div>
+      <div id="target" class="row" style="align-items: stretch"></div>
+      <div id="poem" class="text-center" ></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
