--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Azu</title>
+    <title>|||||||||||||||||||||||||</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,12 +12,6 @@
       .card-image-top {
         max-height: 650px;
         overflow: hidden;
-      }
-      .negative-margin {
-        margin-top: -650px;
-      }
-      .positive-margin {
-        margin-top: 625px;
       }
     </style>
   </head>
