--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <style>
-      .card-image-top {
-        max-height: 650px;
-        overflow: hidden;
-      }
-    </style>
+    <link
+      href="my_styles.css"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="back">
     <div class="container">
-      <h1 class="fw-light display-4 text-center mt-4 mb-4 display-1">
-        Instrucciones para regar un dpto
-      </h1>
-      <div id="target" class="row" style="align-items: stretch"></div>
-      <div id="poem" class="text-center" ></div>
+      <div class="text-center mt-4 mb-4 ">
+        <h1 class="poem-title mb-4">
+          Instrucciones para regar un dpto
+        </h1>
+        <footer class="blockquote-footer" style="font-size: medium;">antes de usar, lea las indicaciones</footer>
+      </div>
+    
+
+      <div id="target" class="row"></div>
+      <div id="poem" ></div>
+      <div id="poem2" class="poem" ></div>
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
